--- a/odin-calculator/index.html
+++ b/odin-calculator/index.html
@@ -33,7 +33,7 @@
                 <button data-number="3">3</button>
                 <button data-operation="add">+</button>
             
-                <button data-number class="span-two">0</button>
+                <button data-number="0" class="span-two">0</button>
                 <button data-number=".">.</button>
                 <button data-equals>=</button>
             </div>
